Prevent scrollbar from appearing over top of text.

--- a/bin/core-files/css/C_Engine.css
+++ b/bin/core-files/css/C_Engine.css
@@ -524,7 +524,7 @@ CONTENT TEXT LAYOUTS*/
 	overflow: auto;
 	background: none;
 	border-width: 0px;
-	/*padding-right: 15px;*/
+	padding-right: 10px;
 }
 
 #contentHolder p{
